# open-converse

./: .gitignore  AgentEnhancement.md  DATABASE_IMPLEMENTATION.md  MIGRATION_COMPLETE.md  MODULARIZATION_PLAN.md  README.md  SETUP_INSTRUCTIONS.md  check_build.sh  files_to_keep.txt  next.config.js  package-lock.json  package.json  product_details.md  prompts.md  test-agent.js  tsconfig-electron.json  tsconfig.json  webpack.config.js  webpack.main.config.js  webpack.renderer.config.js
.github/: copilot-instructions.md
dist-electron/: main.js  preload.js
dist-electron/src-electron/: main.js  preload.js
shared/: database-types.ts  langchain-adapters.ts  memory.ts  types.js  types.ts
src-electron/: main.ts  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: agents.rs  main.rs  settings.rs
src-tauri/src/connectors/: mod.rs  openrouter.rs  settings.rs
src-tauri/src/database/: README.md  commands.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/database/migrations/: 002_phase1_core.sql
src-tauri/src/database/providers/: mod.rs  sqlite.rs
src-tauri/src/database/tests/: mod.rs  phase1_core.rs
src/agents/: README.md  index.ts
src/agents/config/: defaults.ts  llm.ts
src/agents/core/: AgentManager.ts  factory.ts  types.ts
src/components/: ChatStream.tsx  ErrorState.tsx  MessageInput.tsx  ProviderTestComponent.tsx  Sidebar.tsx  TypingIndicator.tsx  WelcomeScreen.tsx  index.ts
src/hooks/: useAgents.ts  useChat.ts  useChatNew.ts  useSessionMessages.ts  useSessions.ts  useTriggers.ts
src/main/: main.ts  preload.ts
src/pages/: _app.tsx  _document.tsx  agent-test.tsx  agents.tsx  chat-demo.tsx  index.tsx  settings-old.tsx  settings.tsx  test.tsx
src/renderer/: index.html  index.ts
src/shared/: types.ts  utils.ts
src/styles/: globals.css
src/utils/: agent-session.ts  settings.ts  tauri.ts
(+54 files in other folders)
